--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>the holy grail</title>
     <link rel="stylesheet" href="./css/styles.css">
-  </head>
-  <body class="container">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+
+    <script src="/js/app.js"></script>
+
+    <script src="/js/total/totalService.js"></script>
+    <script src="/js/total/totalController.js"></script>
+    <script src="/js/total/totalComponent.js"></script>
+
+    <script src="/js/add/addService.js"></script>
+    <script src="/js/add/addController.js"></script>
+    <script src="/js/add/addComponent.js"></script>
+
+    <script src="/js/multiply/multiplyService.js"></script>
+    <script src="/js/multiply/multiplyController.js"></script>
+    <script src="/js/multiply/multiplyComponent.js"></script>
+
+</head>
+
+<body ng-app="clickerApp" class="container">
     <div class="app">
-      <div class="header">
-        Total: 0
-      </div>
-      <div class="body">
-        <div class="left"></div>
-        <div class="center">
-          <input type="button" value="+1" class="button"></input>
+        <div class="header">
+            <total-component></total-component>
         </div>
-        <div class="right"></div>
-      </div>
-      <div class="footer">
-        Made w/ &lt;3 @ FastTrack'D
-      </div>
+        <div class="body">
+            <div class="left">
+                <multiply-component></multiply-component>
+            </div>
+            <add-component></add-component>
+            <div class="right"></div>
+        </div>
+        <div class="footer">
+            Made w/ &lt;3 @ FastTrack'D
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
