--- a/js/add/addTemplate.html
+++ b/js/add/addTemplate.html
@@ -1,3 +1,3 @@
-<div class="center">
-    <button class="button" ng-click="$ctrl.addToTotal()">+{{ $ctrl.addService.additive }}</button>
+<div class="addComponent">
+    <button class="button" ng-click="$ctrl.addService.addToTotal()">+{{ $ctrl.addService.additive | number: 5}}</button>
 </div>
