Fixed problem with circular dependencies

--- a/js/multiply/multiplyTemplate.html
+++ b/js/multiply/multiplyTemplate.html
@@ -1,6 +1,6 @@
 <div class="multiplyComponent">
     <label class="label">Cost: {{ $ctrl.multiplyService.cost }} points</label>
-    <button class="button" ng-click="$ctrl.multiplyAddtive()" 
+    <button class="button" ng-click="$ctrl.multiplyAdditive()" 
     ng-style="{'background-color' : $ctrl.multiplyService.background_color}"
     ng-disabled="$ctrl.multiplyService.disabled">
         *{{ $ctrl.multiplyService.multiplier }}
