--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <script src="/js/app.js"></script>
 
+    <script src="/js/multiply/multiplyService.js"></script>
+    <script src="/js/multiply/multiplyController.js"></script>
+    <script src="/js/multiply/multiplyComponent.js"></script>
+
     <script src="/js/total/totalService.js"></script>
     <script src="/js/total/totalController.js"></script>
     <script src="/js/total/totalComponent.js"></script>
@@ -18,9 +22,7 @@
     <script src="/js/add/addController.js"></script>
     <script src="/js/add/addComponent.js"></script>
 
-    <script src="/js/multiply/multiplyService.js"></script>
-    <script src="/js/multiply/multiplyController.js"></script>
-    <script src="/js/multiply/multiplyComponent.js"></script>
+    
 
 </head>
 
@@ -33,13 +35,17 @@
             <div class="left">
                 <multiply-component></multiply-component>
             </div>
-            <add-component></add-component>
-            <div class="right"></div>
+            <div class="center">
+                <add-component></add-component>
+            </div>
+            <div class="right">
+                
+            </div>
         </div>
         <div class="footer">
             Made w/ &lt;3 @ FastTrack'D
         </div>
-    </div>
-</body>
+        </div>
+        </body>
 
 </html>
