Added cost with increase when user for multiply button. Also forgot to add index and css for previous commits so stuff might not work before this commit

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script src="/js/add/addController.js"></script>
     <script src="/js/add/addComponent.js"></script>
 
+    <script src="/js/autoclicker/autoclickerService.js"></script>
+    <script src="/js/autoclicker/autoclickerController.js"></script>
+    <script src="/js/autoclicker/autoclickerComponent.js"></script>
+
     
 
 </head>
@@ -39,7 +43,7 @@
                 <add-component></add-component>
             </div>
             <div class="right">
-                
+                <autoclicker-component></autoclicker-component>
             </div>
         </div>
         <div class="footer">
