--- a/js/multiply/multiplyTemplate.html
+++ b/js/multiply/multiplyTemplate.html
@@ -1,5 +1,5 @@
 <div class="multiplyComponent">
-    <label class="label">Cost: {{ $ctrl.multiplyService.cost }} points</label>
+    <label class="label">Cost: {{ $ctrl.multiplyService.cost | number: 5}} points</label>
     <button class="button" ng-click="$ctrl.multiplyAdditive()" 
     ng-style="{'background-color' : $ctrl.multiplyService.background_color}"
     ng-disabled="$ctrl.multiplyService.disabled">
