Got rid of all services and placed functionality into single service called clicker service

--- a/js/autoclicker/autoClickerTemplate.html
+++ b/js/autoclicker/autoClickerTemplate.html
@@ -1,9 +1,9 @@
 <div class="autoclickerComponent">
-    <label class="label">AutoClickers: {{ $ctrl.autoclickerService.numAutoClickers }}</label>
-    <label class="label">Cost: {{ $ctrl.autoclickerService.cost }} points</label>
-    <button class="button" ng-click="$ctrl.addAutoClicker()" 
-    ng-style="{'background-color' : $ctrl.autoclickerService.background_color}"
-    ng-disabled="$ctrl.autoclickerService.disabled">
+    <label class="label">AutoClickers: {{ $ctrl.clickerService.numAutoClickers }}</label>
+    <label class="label">Cost: {{ $ctrl.clickerService.costAutoClicker }} points</label>
+    <button class="button" ng-click="$ctrl.clickerService.addAutoClicker()" 
+    ng-style="{'background-color' : $ctrl.clickerService.backgroundColorAutoClicker}"
+    ng-disabled="$ctrl.clickerService.disabledAutoClicker">
         +1
     </button>
 </div>
