--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 
     <script src="/js/app.js"></script>
 
-    <script src="/js/multiply/multiplyService.js"></script>
+    <script src="/js/clickerService.js"></script>
+
     <script src="/js/multiply/multiplyController.js"></script>
     <script src="/js/multiply/multiplyComponent.js"></script>
 
-    <script src="/js/total/totalService.js"></script>
     <script src="/js/total/totalController.js"></script>
     <script src="/js/total/totalComponent.js"></script>
 
-    <script src="/js/add/addService.js"></script>
     <script src="/js/add/addController.js"></script>
     <script src="/js/add/addComponent.js"></script>
 
-    <script src="/js/autoclicker/autoclickerService.js"></script>
     <script src="/js/autoclicker/autoclickerController.js"></script>
     <script src="/js/autoclicker/autoclickerComponent.js"></script>
 
