Reset works in that it clears center button, multiplier panel, autoclicker panels, and removes autoclickers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script src="/js/autoclicker/autoclickerController.js"></script>
     <script src="/js/autoclicker/autoclickerComponent.js"></script>
 
+    <script src="/js/reset/resetController.js"></script>
+    <script src="/js/reset/resetComponent.js"></script>
+
     
 
 </head>
@@ -31,7 +34,9 @@
 <body ng-app="clickerApp" class="container">
     <div class="app">
         <div class="header">
-            <total-component></total-component>
+                <reset-component></reset-component>
+                <total-component></total-component>
+                <button>Save</button>
         </div>
         <div class="body">
             <div class="left">
