Reset button is now disabled when game state is at initial"

--- a/js/reset/resetTemplate.html
+++ b/js/reset/resetTemplate.html
@@ -1,3 +1,5 @@
 <div>
-    <button ng-click="$ctrl.clickerService.resetGame()">Reset</button>
+    <button ng-click="$ctrl.clickerService.resetGame()" 
+    ng-style="{'background-color' : $ctrl.clickerService.backgroundColorReset}"
+    ng-disabled="$ctrl.clickerService.disabledReset">Reset</button>
 </div>
