--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
 
     <script src="/js/app.js"></script>
 
@@ -27,6 +28,9 @@
     <script src="/js/reset/resetController.js"></script>
     <script src="/js/reset/resetComponent.js"></script>
 
+    <script src="/js/save/saveController.js"></script>
+    <script src="/js/save/saveComponent.js"></script>
+
     
 
 </head>
@@ -36,7 +40,7 @@
         <div class="header">
                 <reset-component></reset-component>
                 <total-component></total-component>
-                <button>Save</button>
+                <save-component></save-component>
         </div>
         <div class="body">
             <div class="left">
