--- a/js/autoclicker/autoClickerTemplate.html
+++ b/js/autoclicker/autoClickerTemplate.html
@@ -5,5 +5,5 @@
     ng-disabled="$ctrl.clickerService.disabledAutoClicker">
         +1
     </button>
-    <label class="label">Cost: {{ $ctrl.clickerService.costAutoClicker | number : 5 }} points</label>
+    <label class="label">Cost: {{ $ctrl.clickerService.costAutoClicker | exponential }} points</label>
 </div>
