Added saveService and moved some code from clickerService in there. Also created run in app and moved startup code in there

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="/js/reset/resetController.js"></script>
     <script src="/js/reset/resetComponent.js"></script>
 
+    <script src="/js/save/saveService.js"></script>
     <script src="/js/save/saveController.js"></script>
     <script src="/js/save/saveComponent.js"></script>
 
