--- a/js/save/saveTemplate.html
+++ b/js/save/saveTemplate.html
@@ -1,3 +1,3 @@
 <div>
-    <button ng-click="$ctrl.clickerService.saveGame()">Save</button>
+    <button ng-click="$ctrl.saveService.saveGame()">Save</button>
 </div>
