--- a/js/reset/resetTemplate.html
+++ b/js/reset/resetTemplate.html
@@ -1,5 +1,4 @@
 <div>
-    <button ng-click="$ctrl.clickerService.resetGame()" 
-    ng-style="{'background-color' : $ctrl.clickerService.backgroundColorReset}"
-    ng-disabled="$ctrl.clickerService.disabledReset">Reset</button>
+    <button ng-click="$ctrl.clickerService.resetGame()" ng-style="{'background-color' : $ctrl.clickerService.backgroundColorReset}"
+        ng-disabled="$ctrl.clickerService.disabledReset">Reset</button>
 </div>
